--- a/templates/base.html
+++ b/templates/base.html
@@ -11,17 +11,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">Fingerprint Pay</a>
-            {% if current_user.is_authenticated %}
             <div class="navbar-nav ms-auto">
-                {% if current_user.is_admin %}
+                {% if current_user.is_authenticated and current_user.is_admin %}
                 <a class="nav-link" href="{{ url_for('admin_dashboard') }}">Admin Dashboard</a>
-                {% else %}
-                <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
-                <a class="nav-link" href="{{ url_for('make_payment') }}">Make Payment</a>
-                {% endif %}
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                {% else %}
+                <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                <a class="nav-link" href="{{ url_for('admin_login') }}">Admin</a>
+                {% endif %}
             </div>
-            {% endif %}
         </div>
     </nav>
 
